# cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Example.cpp  Example.h  main.cpp
test/: CMakeLists.txt  ExampleTest.cpp  utils.h
